fix(sidebar-filter): increase contrast of matches

--- a/components/left-sidebar/server.css
+++ b/components/left-sidebar/server.css
@@ -126,7 +126,7 @@
 
   mark {
     /* Sidebar filter highlight */
-    color: unset;
+    color: var(--color-area-link);
     background-color: var(--color-background-blue);
   }
 }
