--- a/components/sidebar-filter/element.css
+++ b/components/sidebar-filter/element.css
@@ -95,7 +95,7 @@
 
     font-size: 0.7rem;
 
-    color: var(--color-text-secondary);
+    color: var(--color-area-link);
 
     white-space: nowrap;
 
